Project devflow_platform {
  database_type: 'MySQL'
  Note: 'DevFlow Platform database schema for MySQL 8.0'
}

Table users {
  id bigint [pk, increment]
  username varchar(50) [not null]
  email varchar(100) [not null]
  password_hash varchar(255) [not null]
  avatar varchar(255)
  is_active boolean [default: true]
  is_deleted boolean [default: false]
  created_at datetime
  updated_at datetime

  indexes {
    email [unique, name: 'uq_users_email']
  }

  Note: '系统用户表'
}

Table roles {
  id bigint [pk, increment]
  name varchar(50) [not null]
  description varchar(255)

  Note: '系统角色表；初始化角色：Admin、User'
}

Table permissions {
  id bigint [pk, increment]
  code varchar(100)
  description varchar(255)

  indexes {
    code [unique, name: 'uq_permissions_code']
  }

  Note: '系统权限表；权限编码示例：project:create、issue:update'
}

Table user_roles {
  id bigint [pk, increment]
  user_id bigint
  role_id bigint

  indexes {
    (user_id, role_id) [unique, name: 'uq_user_roles_user_role']
  }

  Note: '用户与系统角色多对多关联表'
}

Table role_permissions {
  id bigint [pk, increment]
  role_id bigint
  permission_id bigint

  indexes {
    (role_id, permission_id) [unique, name: 'uq_role_permissions_role_permission']
  }

  Note: '系统角色与权限多对多关联表'
}

Table projects {
  id bigint [pk, increment]
  name varchar(100) [not null]
  description text
  status varchar(30)
  owner_id bigint
  is_deleted boolean [default: false]
  created_at datetime
  updated_at datetime

  Note: '项目表'
}

Table project_roles {
  id bigint [pk, increment]
  name varchar(50)
  description varchar(255)

  Note: '项目角色表；初始化角色：Owner、Developer、Viewer'
}

Table project_members {
  id bigint [pk, increment]
  project_id bigint
  user_id bigint
  role_id bigint
  joined_at datetime

  indexes {
    (project_id, user_id) [unique, name: 'uq_project_members_project_user']
  }

  Note: '项目成员关联表'
}

Table issues {
  id bigint [pk, increment]
  project_id bigint
  creator_id bigint
  assignee_id bigint
  title varchar(200) [not null]
  description text
  type varchar(30) [note: 'BUG | FEATURE | TASK']
  priority varchar(30) [note: 'LOW | MEDIUM | HIGH | CRITICAL']
  status varchar(30) [note: 'OPEN | IN_PROGRESS | REVIEW | DONE']
  version int [not null, default: 1, note: '乐观锁版本号']
  is_deleted boolean [default: false]
  created_at datetime
  updated_at datetime

  indexes {
    project_id [name: 'idx_issues_project_id']
    assignee_id [name: 'idx_issues_assignee_id']
    status [name: 'idx_issues_status']
  }

  Note: 'Issue 核心业务表'
}

Table auth_sessions {
  id varchar(36) [pk, note: '会话 UUID']
  user_id bigint
  refresh_token_hash varchar(64) [not null, unique]
  rotation_count int [not null, default: 0]
  ip_address varchar(45)
  user_agent varchar(255)
  expires_at datetime [not null]
  last_used_at datetime
  revoked_at datetime
  created_at datetime

  indexes {
    user_id [name: 'idx_auth_sessions_user_id']
    expires_at [name: 'idx_auth_sessions_expires_at']
  }

  Note: '认证设备会话与 Refresh Token 轮换状态'
}

Table comments {
  id bigint [pk, increment]
  issue_id bigint
  user_id bigint
  content text
  created_at datetime

  Note: 'Issue 评论表'
}

Table reviews {
  id bigint [pk, increment]
  issue_id bigint
  requester_id bigint
  reviewer_id bigint
  status varchar(30) [note: 'PENDING | APPROVED | REJECTED']
  comment text
  created_at datetime

  Note: '代码审核表'
}

Table notifications {
  id bigint [pk, increment]
  user_id bigint
  type varchar(50)
  target_type varchar(50) [note: '通知关联对象类型，例如 issue']
  target_id bigint [note: '通知关联对象 ID，例如 100']
  content text
  is_read boolean [default: false]
  created_at datetime

  Note: '通知表；通过 target_type 与 target_id 定位关联对象'
}

Ref: user_roles.user_id > users.id
Ref: auth_sessions.user_id > users.id
Ref: user_roles.role_id > roles.id

Ref: role_permissions.role_id > roles.id
Ref: role_permissions.permission_id > permissions.id

Ref: projects.owner_id > users.id

Ref: project_members.project_id > projects.id
Ref: project_members.user_id > users.id
Ref: project_members.role_id > project_roles.id

Ref: issues.project_id > projects.id
Ref: issues.creator_id > users.id
Ref: issues.assignee_id > users.id

Ref: comments.issue_id > issues.id
Ref: comments.user_id > users.id

Ref: reviews.issue_id > issues.id
Ref: reviews.requester_id > users.id
Ref: reviews.reviewer_id > users.id

Ref: notifications.user_id > users.id
